Fix alignment for header

--- a/src/css/_cards.scss
+++ b/src/css/_cards.scss
@@ -58,6 +58,7 @@
 .costPerNight {
   grid-area: cost;
   font-weight: bold;
+  text-align: center;
 }
 
 .booking-info,
