--- a/src/css/_text.scss
+++ b/src/css/_text.scss
@@ -8,6 +8,7 @@ h3 {
 
 .card-section-title {
   font-size: 2.5rem;
+  text-transform: capitalize;
 }
 
 .calendar-input-label {
